--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -30,7 +30,11 @@
             <form class="form-inline">
                 <div class="form-group">
                     <label for="name">Receiver name ?</label>
-                    <input type="text" id="name" class="form-control" placeholder="Your name here...">
+                    <input type="text" id="name" class="form-control" placeholder="Contact name here...">
+                </div>
+                <div class="form-group">
+                    <label for="message">Message</label>
+                    <input type="text" id="message" class="form-control">
                 </div>
                 <button id="send" class="btn btn-default" type="submit">Send</button>
             </form>
